--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chs73be",
+  "name": "be-demo",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -10,25 +10,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jdmedlock/chs73be.git"
+    "url": "git+https://github.com/jdmedlock/be-demo.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jdmedlock/chs73be/issues"
+    "url": "https://github.com/jdmedlock/be-demo/issues"
   },
-  "homepage": "https://github.com/jdmedlock/chs73be#readme",
+  "homepage": "https://github.com/jdmedlock/be-demo#readme",
   "dependencies": {
-    "airtable": "^0.11.4",
-    "apollo-server-express": "^2.18.0-rc.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.4",
-    "node-mailjet": "^3.3.1"
+    "express-async-handler": "^1.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
